fix carousel padding, margin and overflow to make it look better

--- a/src/components/card/Card.scss
+++ b/src/components/card/Card.scss
@@ -4,7 +4,6 @@
 .card {
   cursor: pointer;
   border-radius: 4px;
-  margin-right: 0.5rem;
 
   @include respond(mobileS) {
     height: 173px;
