--- a/src/components/sidebar/Sidebar.scss
+++ b/src/components/sidebar/Sidebar.scss
@@ -36,3 +36,7 @@
   }
 
 }
+
+.scroll-content {
+  margin-bottom: 3rem;
+}
