--- a/src/route/artists/ArtistsPage.scss
+++ b/src/route/artists/ArtistsPage.scss
@@ -4,12 +4,12 @@
   width: 100%;
   height: 100%;
   padding-top: 57px;
+  padding-left: 3rem;
 
   &__carousel {
     .artistsPage__menu {
       justify-content: start;
       display: flex;
-      margin: 0 3rem;
     }
   }
 
@@ -20,12 +20,12 @@
 
     .artistsPage__menu {
       display: flex;
-      margin: 0 3rem;
+      margin: 0 0rem;
     }
   }
 
   &__tracks {
-    padding: 0 1rem 0 3rem;
+    padding: 0 1rem 0 0rem;
   }
 
   &__tracksContainer {
